fixed image dispaly on item-card-main-image and fixed url line-break on bug item

--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -646,11 +646,10 @@ input, textarea {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #ecf0f3;
 }
 .item-card-main-image img {
+    max-width: 90%;
     border-radius: 16px;
-    max-width: 100%;
     max-height: 300px;
 }
 
